# rust-fm

./: Cargo.toml  README.md
src/: filemanager.rs  fmloop.rs  fzf.rs  main.rs  state.rs  theme.rs  utils.rs
