[package]
name = "rust-fm"
version = "0.1.2"
authors = ["Julian Schmidhuber <schmidhuberj2@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# boxion = {path="../boxion/"}
boxion = {git = "https://github.com/Schmiddiii/boxion" }
termion = "*"
mime = "*"
